1. Update StickyHeaderExpandableListView, add base adapter for it. 2. Try to fixed Memory Leaking in TabLayout with ViewPagerFragment, but there are still memory leaks, as if due to problems with the basic components of MvvmHabit Library.

--- a/app/src/main/res/layout/fragment_cameras.xml
+++ b/app/src/main/res/layout/fragment_cameras.xml
@@ -53,7 +53,7 @@
                 tools:text="Play Now (0)" />
         </LinearLayout>
 
-        <com.example.allinone.base.StickyExpandableListView
+        <com.example.allinone.base.StickyHeaderExpListView
             android:id="@+id/areas_list"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
