--- a/app/src/main/res/layout/fragment_video.xml
+++ b/app/src/main/res/layout/fragment_video.xml
@@ -38,7 +38,7 @@
                 app:iconifiedByDefault="true" />
         </LinearLayout>
 
-        <com.example.allinone.base.StickyExpandableListView
+        <com.example.allinone.base.StickyHeaderExpListView
             android:id="@+id/areas_list"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
